# xtremetrade

./: .env.example  CLAUDE.md  README.md  TODO.md
.claude/agents/: code-reviewer.md  polishing-prompt.md
backend/: bot.py  main.py  pyproject.toml
backend/services/: ai_analyzer.py  chain.py  trade_executor.py
backend/tests/: test_api.py  test_integrations.py  test_proxy.py
docs/: 00-index.md  01-backend.md  02-frontend.md  03-blockchain.md  04-bmad.md  05-faq.md  context-front.md  erc8004.md  testing-guide.md
frontend/: README.md  gpt-taste.md  index.html  interactive-animation.md  metadata.json  package-lock.json  package.json  server.ts  ux-engineering-edge.md
frontend/docs/: 00-index.md  01-backend.md  02-frontend.md  03-blockchain.md  04-bmad.md  05-faq.md
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActiveSignals.tsx  AgentPanel.tsx  CalibrationView.tsx  DataTable.tsx  ErrorBoundary.tsx  HistoryView.tsx  LandingPage.tsx  OnboardingGuide.tsx  PerformanceView.tsx  Sidebar.tsx  VisualParserView.tsx  WalkthroughTour.tsx
frontend/src/hooks/: useAppState.ts
frontend/src/lib/: audio.ts
frontend/src/services/: api.ts
smart-contracts/: hardhat.config.js  package-lock.json  package.json
smart-contracts/cache/: solidity-files-cache.json
smart-contracts/contracts/: SignalVerifier.sol
smart-contracts/scripts/: deploy.js
web3/: hardhat.config.js  helper-hardhat-config.js  package.json
web3/cache/: solidity-files-cache.json
web3/deploy/: deploy.js  example.js
web3/scripts/: exmaple.js  script.js
(+27 files in other folders)
