[project]
name = "xtremetrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.106.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "uvicorn[standard]>=0.49.0",
    "web3>=7.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
